--- a/Employee_mvc_webapi/Views/Employees/Delete.cshtml
+++ b/Employee_mvc_webapi/Views/Employees/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Employee_mvc_webapi.Models.Employee
+@model Employee_mvc_webapi.Models.Employee
 
 @{
     ViewBag.Title = "Delete";
@@ -12,11 +12,26 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.FirstName)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.LastName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.LastName)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Emailid)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Emailid)
         </dd>
 
         <dt>
