--- a/Employee_mvc_webapi/Views/Employees/Index.cshtml
+++ b/Employee_mvc_webapi/Views/Employees/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Employee_mvc_webapi.Models.Employee>
+@model IEnumerable<Employee_mvc_webapi.Models.Employee>
 
 @{
     ViewBag.Title = "Index";
@@ -15,10 +15,10 @@
             @Html.DisplayNameFor(model => model.Empid)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.FirstName)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+            @Html.DisplayNameFor(model => model.LastName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Gender)
@@ -38,10 +38,10 @@
             @Html.DisplayFor(modelItem => item.Empid)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.DisplayFor(modelItem => item.FirstName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Address)
+            @Html.DisplayFor(modelItem => item.LastName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Gender)
